config/tests/tcproute-rr/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
images:
- name: ghcr.io/kong/blixt-udp-test-server
  newTag: integration-tests
resources:
- ../../samples/tcproute
- server.yaml
patches:
- path: patch.yaml
