config/tests/tcproute-rr/patch.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: blixt-tcproute-sample
spec:
  parentRefs:
  - name: blixt-tcproute-sample
    port: 8080
  rules:
  - backendRefs:
    - name: blixt-tcproute-sample
      port: 8080
  - backendRefs:
    - name: tcproute-rr-v1
      port: 8080
  - backendRefs:
    - name: tcproute-rr-v2
      port: 8080
