config/tests/tcproute-rr/server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcproute-rr-v1
  labels:
    app: tcproute-rr-v1
spec:
  selector:
    matchLabels:
      app: tcproute-rr-v1
  template:
    metadata:
      labels:
        app: tcproute-rr-v1
    spec:
      containers:
      - name: tcp-echo
        image: istio/tcp-echo-server:1.1
        imagePullPolicy: IfNotPresent
        args: [ "8080", "tcproute-rr-v1:" ]
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcproute-rr-v2
  labels:
    app: tcproute-rr-v2
spec:
  selector:
    matchLabels:
      app: tcproute-rr-v2
  template:
    metadata:
      labels:
        app: tcproute-rr-v2
    spec:
      containers:
      - name: tcp-echo
        image: istio/tcp-echo-server:1.1
        imagePullPolicy: IfNotPresent
        args: [ "8080", "tcproute-rr-v2:" ]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tcproute-rr-v1
  name: tcproute-rr-v1
spec:
  ports:
  - name: tcp
    port: 8080
    protocol: TCP
  selector:
    app: tcproute-rr-v1
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tcproute-rr-v2
  name: tcproute-rr-v2
spec:
  ports:
  - name: tcp
    port: 8080
    protocol: TCP
  selector:
    app: tcproute-rr-v2
  type: ClusterIP
